Prevent the premature wrapping of feed boxes. fixes #12

--- a/themes/btcsumo/assets/styles/components/_feed-box.scss
+++ b/themes/btcsumo/assets/styles/components/_feed-box.scss
@@ -1,3 +1,8 @@
+/* This fix is required to prevent premature wrapping of boxes. */
+.feed-boxes::before {
+  display: inherit;
+}
+
 .feed-boxes {
   display: flex;
   display: -ms-flexbox; /*IE10*/
